# fastapi-auth

./: .env.example  .example.env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose-base.yml  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  logging-prod.ini  logging.yaml  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: ci.yml  codeql.yml  fastapi_ci.yml
app/: __init__.py  config.py  context.py  cors.py  dependencies.py  enums.py  exc_handlers.py  exceptions.py  logging.py  main.py  models.py  routing.py  schemas.py  service.py  settings.py  templating.py  testing.py  workers.py
app/admin/: auth.py  main.py  views.py
app/cache/: adapter.py  config.py  dependencies.py  lifetime.py
app/clients/: config.py  lifespan.py  models.py  repositories.py  schemas.py
app/core/: __init__.py  gateway.py  service.py  uow.py
app/database/: __init__.py  base.py  connection.py  mixins.py  pagination.py  repositories.py  repository.py  schemas.py  types.py  uow.py  utils.py
app/db/: __init__.py  base.py  config.py  connection.py  dependencies.py  exceptions.py  mixins.py  pagination.py  repository.py  schemas.py  types.py  uow.py  utils.py
app/frontend/: auth.py  main.py
app/mail/: base.py  client.py  config.py  dependencies.py
app/notifications/: dependencies.py  expections.py  schemas.py  service.py
app/oauth/: base.py  config.py  dependencies.py  google.py  interfaces.py  schemas.py  telegram.py  yandex.py
app/obs/: config.py  dependencies.py  logging.py  metrics.py  panels.py  setup.py  tracing.py
app/oidc/: base.py  exceptions.py  google.py  pkce.py  schemas.py  yandex.py
app/permissions/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
app/roles/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
app/roles_permissions/: models.py  repository.py  schemas.py
app/security/: hashing.py  tokens.py
app/skeleton/: __init__.py  exceptions.py
app/sso/: __init__.py  base.py  config.py  constants.py  dependencies.py  exceptions.py  (+10 more)
certs/: jwt-private.pem  jwt-public.pem
docker/: docker-entrypoint.sh  entrypoint-dev.sh  entrypoint.sh  fastapi.Dockerfile  redis.Dockerfile  redis.conf
migrations/: env.py
tests/: conftest.py
(+101 files in other folders)
